testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassInstance1(target=es2015).errors.txt
index.js(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== index.js (1 errors) ====
    class Foo {}
    
    module.exports = new Foo();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.